fix z-index

--- a/styles/header.module.scss
+++ b/styles/header.module.scss
@@ -7,7 +7,18 @@
   z-index: 0;
 
   .background {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
     z-index: -1;
+
+    .image {
+      position: relative;
+      width: 100%;
+      height: 100%;
+    }
   }
 
   .container {
@@ -17,6 +28,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(21, 197, 206, 0.8);
+    z-index: 0;
 
     .hero {
       flex-grow: 1;
